<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="server_address"
        android:title="@string/pref_title_server_address"
        android:defaultValue="@string/pref_default_server_address"
        android:selectAllOnFocus="true"
        android:inputType="textNoSuggestions"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="server_port"
        android:title="@string/pref_title_server_port"
        android:defaultValue="@string/pref_default_server_port"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />
    <EditTextPreference
        android:key="player_mac"
        android:title="@string/pref_title_player_mac"
        android:defaultValue="@string/pref_default_player_mac"
        android:selectAllOnFocus="true"
        android:inputType="textNoSuggestions"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />
</PreferenceScreen>
